--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bs.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DN11 OSPF Status</title>
+    <title>DN11 & Vidar Network Monitor</title>
   </head>
   <body>
     <div id="app"></div>
