--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bs.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DN11 & Vidar Network Monitor</title>
   </head>
