--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>DN11 & Vidar Network Monitor</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
